--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&family=Oswald:wght@400;600;700;900&display=swap" rel="stylesheet">
+
     <meta name="theme-color" content="#0D1117" />
     <title>RunBro — Forme seu Squad. Domine a Cidade.</title>
     <meta name="description" content="RunBro é a plataforma social e gamificada para corredores urbanos. Crie seu Squad, suba no ranking e ganhe recompensas." />
@@ -23,6 +25,62 @@
 
   <body>
     <div id="root"></div>
+
+    <!-- Botão Toggle de Tema -->
+    <div class="parallel-button-container">
+      <div class="theme-toggle" onclick="toggleTheme()">
+        <div id="toggleCircle" class="toggle-circle pulse">🌙</div>
+      </div>
+    </div>
+
+    <!-- Overlay de Fade + Slide para troca de tema -->
+    <div id="themeOverlay"></div>
+
+    <script>
+      const THEME_KEY = "preferred-theme";
+
+      function applyTheme(theme) {
+        const html = document.documentElement;
+        const circle = document.getElementById("toggleCircle");
+        const overlay = document.getElementById("themeOverlay");
+
+        // Animação de slide + fade
+        overlay.classList.add("active");
+        setTimeout(() => overlay.classList.remove("active"), 600);
+
+        if (theme === "dark") {
+          html.classList.add("dark");
+          circle.innerHTML = "☀️";
+        } else {
+          html.classList.remove("dark");
+          circle.innerHTML = "🌙";
+        }
+      }
+
+      function detectSystemTheme() {
+        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
+      }
+
+      function initTheme() {
+        const savedTheme = localStorage.getItem(THEME_KEY);
+        if (savedTheme) applyTheme(savedTheme);
+        else applyTheme(detectSystemTheme());
+      }
+
+      initTheme();
+
+      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", () => {
+        if (!localStorage.getItem(THEME_KEY)) applyTheme(detectSystemTheme());
+      });
+
+      function toggleTheme() {
+        const html = document.documentElement;
+        const newTheme = html.classList.contains("dark") ? "light" : "dark";
+        applyTheme(newTheme);
+        localStorage.setItem(THEME_KEY, newTheme);
+      }
+    </script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
